refactor: modernize controllers with validation, standardized status codes, and optimize JPA entity configurations